--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2016-03-29  Werner Lemberg  <wl@gnu.org>
 
+	* src/base/ftadvance.c (FT_Get_Advances): Fix invalid left shift.
+
+2016-03-29  Werner Lemberg  <wl@gnu.org>
+
 	[pfr] Fix binary search (#47514).
 
 	* src/pfr/pfrsbit.c (pfr_lookup_bitmap_data): Handle border
