--- a/ChangeLog
+++ b/ChangeLog
@@ -20,14 +20,15 @@
 	The previous fix for #46372 misunderstood a composite glyph referring
 	same component twice as a recursive reference.  See the discussion
 
-	http://lists.gnu.org/archive/html/freetype/2016-05/msg00000.html
+	  http://lists.gnu.org/archive/html/freetype/2016-05/msg00000.html
 
 	Thanks to Khaled Hosny for finding this issue.
 
 	* src/truetype/ttgload.c (ft_list_get_node_at): A function to get
-	the i-th node from FT_List.  (load_truetype_glyph): In the traversal
-	scan of the reference tree in the composite glyph, we clear the
-	nodes filled by previous sibling chain.
+	the i-th node from FT_List.
+	(load_truetype_glyph): In the traversal scan of the reference tree
+	in the composite glyph, we clear the nodes filled by previous
+	sibling chain.
 
 2016-05-07  Werner Lemberg  <wl@gnu.org>
 
