--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2016-06-07  Werner Lemberg  <wl@gnu.org>
 
+	[autofit] Add support for Ethiopic script.
+
+	* src/autofit/afblue.dat: Add blue zone data for Ethiopic.
+
+	* src/autofit/afblue.c, src/autofit/afblue.h: Regenerated.
+
+	* src/autofit/afscript.h: Add Ethiopic standard characters.
+
+	* src/autofit/afranges.c: Add Ethiopic data.
+
+	* src/autofit/afstyles.h: Add Ethiopic data.
+
+2016-06-07  Werner Lemberg  <wl@gnu.org>
+
 	[autofit] Fix compilation with VS2016 (#48126).
 
 	This compiler doesn't recognize the end-of-comment sequence `*/' if
