--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2016-06-13  Werner Lemberg  <wl@gnu.org>
+
+	[autofit] Add support for Cherokee script.
+
+	* src/autofit/afblue.dat: Add blue zone data for Cherokee.
+
+	* src/autofit/afblue.c, src/autofit/afblue.h: Regenerated.
+
+	* src/autofit/afscript.h: Add Cherokee standard characters.
+
+	* src/autofit/afranges.c: Add Cherokee data.
+
+	* src/autofit/afstyles.h: Add Cherokee data.
+
 2016-06-09  David Capello  <davidcapello@gmail.com>
 
 	[cmake] Avoid modifying `ftconfig.h' and `ftoption.h' files.
