--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-04-24  Werner Lemberg  <wl@gnu.org>
+
+	[truetype] Really fix deallocation in case of error (#47726).
+
+	* src/truetype/ttgload.c (load_truetype_glyph): Thinko; initialize
+	`outline.points' also.
+
 2016-06-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[smooth] Consolidate memory management.
