--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-07-05  Werner Lemberg  <wl@gnu.org>
+
+	* src/pfr/pfrsbit.c (pfr_lookup_bitmap_data): Fix compiler warning.
+
 2016-07-04  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[smooth] Variable type revision (part 2).
